# matplotter

./: CMakeLists.txt  README.md
cmake/: FindPython3.cmake
example_external/: CMakeLists.txt  plotter.cpp
example_internal/: CMakeLists.txt  plotter.cpp
matplotter/: matplotlibcpp.h  matplotter.cpp  matplotter.h
